# nyc_taxi_trips_etl

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: README.md  cd-dev.yml  cd-prod.yml  cd.yml  ci.yml
notebooks/: create_lookup_views.ipynb  create_lookups.ipynb  setup_catalog.ipynb  setup_catalog_and_schemas.ipynb  test_dbc_connection.ipynb
resources/jobs/: nyc_taxi_trip_etl.job.yml  nyc_taxi_trip_etl_create_lookups.job.yml  nyc_taxi_trip_etl_setup.job.yml  nyx_taxi_lookup_views.job.yml
src/nyc_taxi_trips_etl/: main.py
src/nyc_taxi_trips_etl/etl/bronze/: load_to_bronze.ipynb
src/nyc_taxi_trips_etl/etl/gold/: trip_peak_hours.ipynb  trip_summary_per_borough.ipynb
src/nyc_taxi_trips_etl/etl/landing/: load_to_landing.ipynb
src/nyc_taxi_trips_etl/etl/silver/: load_to_silver.ipynb
src/nyc_taxi_trips_etl/utils/: pipeline_params_parsing.py
tests/utils/: test_pipeline_params_parsing.py
