[project]
name = "nyc_taxi_trips_etl"
version = "1.0.0"
authors = [{ name = "github.com/devtmaz" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
    "databricks-connect==15.4.23",
    "pre-commit>=4.6.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[project.scripts]
main = "nyc_taxi_trips_etl.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyc_taxi_trips_etl"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.black]
line-length = 81
